--- a/style.css
+++ b/style.css
@@ -76,11 +76,10 @@ footer {
 
 h1 {
   font-size: 3em;
-  font-weight: 800;
+  font-weight: bolder;
   text-transform: uppercase;
   text-align: center;
   color: #feed00;
-  letter-spacing: -0.05em;
   -webkit-text-stroke: 2px #0d0d0d;
   text-stroke: 2px #0d0d0d;
   text-shadow: 1px 1px 1px rgba(0,0,0,.8);
@@ -119,7 +118,7 @@ a:active {
 }
 
 dt, dd {
-  text-shadow: 1px 0px 0px rgba(255,255,255,.8);
+  text-shadow: 0px 1px 0px rgba(255,255,255,.8);
 }
 
 dt {
