--- a/style.css
+++ b/style.css
@@ -137,8 +137,8 @@ dd {
   max-width: 640px;
   padding: 2em 4em;
   border-radius: 1em;
-  border: solid 4px rgba(0,0,0,.8);
-  box-shadow: 0px 6px 12px rgba(0,0,0,.5);
+  border: solid 4px #300808;
+  box-shadow: 0px 6px 12px rgba(0,0,0,.5), inset 0px -1px 0px rgba(255,255,255,.5), 0px -1px 0px rgba(255,255,255,.5);
   background-color: #E6E6E6;
   background-image: linear-gradient(to top, rgba(222,162,92,.8), rgba(229,214,147,.6), transparent 80%), repeating-linear-gradient(90deg, #e6e6e6, #e6e6e6 10px, #bcbcbc 16px, #bcbcbc 40px, #e6e6e6 46px);
 }
@@ -234,5 +234,9 @@ dd {
 @media (prefers-color-scheme: dark) {
   body {
 		background-color: #300808;
+  }
+
+  .entry {
+    border-color: #803e12;
   }
 }
