--- a/style.css
+++ b/style.css
@@ -71,19 +71,23 @@ header {
 
 footer {
   text-align: center;
-	margin: 3em 0 0;
+	margin: 3em 0;
 }
 
-h1 {
+h1, h2 {
   font-size: 3em;
   font-weight: bolder;
   text-transform: uppercase;
   text-align: center;
   color: #feed00;
   -webkit-text-stroke: 2px #0d0d0d;
-  text-stroke: 2px #0d0d0d;
+  text-stroke: 4px #0d0d0d;
   text-shadow: 1px 1px 1px rgba(0,0,0,.8);
   margin-bottom: 1em;
+}
+
+h2 {
+  font-size: 2em;
 }
 
 a {
@@ -118,7 +122,7 @@ a:active {
 }
 
 dt, dd {
-  text-shadow: 0px 1px 0px rgba(255,255,255,.8);
+  text-shadow: 0px 1px 0px rgba(255,255,255,.6);
 }
 
 dt {
