Fix build by removing bourbon dependency

--- a/_sass/feuer/_event.scss
+++ b/_sass/feuer/_event.scss
@@ -21,7 +21,7 @@
     right: 6.5vw;
     margin-top: -20px;
     color: $fg;
-    padding: 2px 8px;
+    padding: .1em .5em;
     font-weight: bolder;
     transition: transform 0.2s, color 0.2s;
     border: solid 1px transparent;
