--- a/_sass/feuer/_tile.scss
+++ b/_sass/feuer/_tile.scss
@@ -41,7 +41,8 @@
       padding: 0.5em 1em;
       text-decoration: none;
       color: $fg;
-      @include overflow-wrap;
+      word-wrap: break-word;
+      overflow-wrap: break-word;
     }
 
     strong {
