--- a/_sass/feuer/_header.scss
+++ b/_sass/feuer/_header.scss
@@ -13,6 +13,7 @@ header {
   &> h1 > a {
     transition: font-size ease-out .2s;
     @include heading($feuer-logo-color, $feuer-logo-stroke-color);
+    padding: 3em 3vw;
   }
 
   &> marquee {
@@ -24,7 +25,7 @@ header {
     margin-bottom: -6px;
 
     & p {
-      margin: 0;
+      margin: 20px;
     }
   }
 
@@ -41,8 +42,8 @@ header {
       text-decoration: none;
       color: $fg;
       font-weight: bolder;
-      border-left: solid 30px $fg;
-      border-right: solid 30px $fg;
+      border-left: solid 3px $fg;
+      border-right: solid 3px $fg;
 
       & + a {
         border-left: 0;
