--- a/_sass/feuer/_header.scss
+++ b/_sass/feuer/_header.scss
@@ -13,7 +13,7 @@ header {
   &> h1 > a {
     transition: font-size ease-out .2s;
     @include heading($feuer-logo-color, $feuer-logo-stroke-color);
-    padding: 3em 3vw;
+    padding: 5vw;
   }
 
   &> marquee {
@@ -25,7 +25,7 @@ header {
     margin-bottom: -6px;
 
     & p {
-      margin: 20px;
+      margin: 0;
     }
   }
 
