--- a/_sass/feuer/_header.scss
+++ b/_sass/feuer/_header.scss
@@ -1,7 +1,7 @@
 @import 'feuer/mixin/heading';
 
 $feuer-logo-color: #e3b44e;
-$feuer-logo-stroke-color: #a75875;
+$feuer-logo-stroke-color: #d44290;
 
 header {
   &> h1 {
