--- a/_sass/feuer/_event.scss
+++ b/_sass/feuer/_event.scss
@@ -3,7 +3,7 @@
   background: radial-gradient(90deg, $blau 0%, #fff 100%);
   padding: 3vw 5vw;
   width: 90vw;
-  margin: 2em auto;
+  margin: 42vw auto 2em;
   border: solid 1px rgba(0, 0, 0, .4);
   box-shadow: inset 0px 1px 0px rgba(255, 255, 255, .3), inset 1px 0px 0px rgba(255, 255, 255, .3), inset -1px 0px 0px rgba(255, 255, 255, .3), inset 0px -1px 0px rgba(255, 255, 255, .3);
 
@@ -34,5 +34,27 @@
     &:active {
       box-shadow: inset 0px 0px 3px rgba(0, 0, 0, .5);
     }
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .event {
+    margin-top: 18vw;
+
+    &> .back {
+      margin-top: -0.1em;
+    }
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .event {
+    margin-top: 16vw;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .event {
+    margin-top: 14vw;
   }
 }
