--- a/_sass/feuer/_header.scss
+++ b/_sass/feuer/_header.scss
@@ -4,15 +4,20 @@ $feuer-logo-color: #e3b44e;
 $feuer-logo-stroke-color: #d44290;
 
 header {
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  width: 100%;
+
   &> h1 {
     text-align: center;
-    letter-spacing: .1em;
+    letter-spacing: .05em;
     font-size: 6vw;
   }
 
   &> h1 > a {
     transition: font-size ease-out .2s;
-    @include heading($feuer-logo-color, $feuer-logo-stroke-color);
+    @include heading($feuer-logo-color, $feuer-logo-stroke-color, 3px);
   }
 
   &> marquee {
@@ -32,7 +37,7 @@ header {
     border-bottom: solid 1px rgba(0, 0, 0, .3);
     box-shadow: 0px 1px 0px rgba(255, 255, 255, .2);
     background-color: rgb(222, 108, 109);
-    margin-bottom: 2em;
+    margin-bottom: 1em;
     padding: 0.5em 3.5vw;
 
     &> a {
@@ -65,3 +70,25 @@ header {
     }
   }
 }
+
+@media screen and (max-width: 800px) {
+  header {
+    &> h1 {
+      font-size: 9vw;
+      line-height: 1em;
+    }
+
+    &> h1 > a {
+      @include stroke(2px, $feuer-logo-stroke-color);
+    }
+  }
+}
+
+@media screen and (min-width: 480px) {
+  header {
+    &> h1 {
+      font-size: 6vw;
+    }
+  }
+}
+
