--- a/_sass/feuer/_page.scss
+++ b/_sass/feuer/_page.scss
@@ -2,7 +2,7 @@
   margin: 1em 0;
   padding: 3vw 5vw;
   width: 90vw;
-  margin: 2em auto;
+  margin: 40vw auto 2em;
 
   h2 {
     text-align: center;
@@ -36,3 +36,22 @@
     }
   }
 }
+
+@media screen and (min-width: 480px) {
+  .page {
+    margin-top: 18vw;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .page {
+    margin-top: 14vw;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .page {
+    margin-top: 12vw;
+  }
+}
+
