--- a/_sass/feuer/_palette.scss
+++ b/_sass/feuer/_palette.scss
@@ -10,3 +10,5 @@ $lila-neon: rgb(255, 164, 244);
 $amarelo: rgb(248, 252, 4);
 $blau: rgb(95, 208, 250);
 $green: rgb(64, 255, 128);
+$lime: rgb(176, 252, 92);
+$tangerine: rgb(255, 140, 141);
