--- a/_sass/feuer/_event.scss
+++ b/_sass/feuer/_event.scss
@@ -2,7 +2,8 @@
   background: $blau;
   background: radial-gradient(90deg, $blau 0%, #fff 100%);
   padding: 3vw 5vw;
-  width: 90vw;
+  width: 84vw;
+  position: relative;
   margin: 42vw auto 2em;
   border: solid 1px rgba(0, 0, 0, .4);
   box-shadow: inset 0px 1px 0px rgba(255, 255, 255, .3), inset 1px 0px 0px rgba(255, 255, 255, .3), inset -1px 0px 0px rgba(255, 255, 255, .3), inset 0px -1px 0px rgba(255, 255, 255, .3);
@@ -18,8 +19,8 @@
     text-decoration: none;
     display: block;
     position: absolute;
-    right: 6.5vw;
-    margin-top: -20px;
+    right: 2vw;
+    top: 2vw;
     color: $fg;
     padding: .1em .5em;
     font-weight: bolder;
@@ -39,22 +40,36 @@
 
 @media screen and (min-width: 480px) {
   .event {
-    margin-top: 18vw;
+    margin-top: 25vw;
+  }
+}
 
-    &> .back {
-      margin-top: -0.1em;
-    }
+@media screen and (min-width: 640px) {
+  .event {
+    margin-top: 23vw;
   }
 }
 
 @media screen and (min-width: 800px) {
   .event {
-    margin-top: 16vw;
+    margin-top: 19vw;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .event {
-    margin-top: 14vw;
+    margin-top: 18vw;
+  }
+}
+
+@media screen and (min-width: 1366px) {
+  .event {
+    margin-top: 17vw;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .event {
+    margin-top: 15vw;
   }
 }
